# mathService

./: .gitignore  README.md  pyproject.toml
backend/: manage.py  pytest.ini
backend/config/: urls.py
backend/config/settings/: base.py  production.py
backend/math_calc/: apps.py  serializers.py  tests.py  urls.py  views.py
